spacing corrections

--- a/src/assets/css/Home/Home.css
+++ b/src/assets/css/Home/Home.css
@@ -1,5 +1,5 @@
 .welcome-banner {
-    height: 103vh;
+    height: 100vh;
     background: url("../../images/Home/head.jpg");
     background-position: center;
     background-size: cover;
